Add text shadow to h1

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,10 @@ body{
 h2 {
     text-decoration: underline;
   }
+  button :hover{
+      background-color: orange;
+  }
+  h1 {
+    text-shadow: 2px 2px 5px red;
+    text-decoration: underline;
+  }
