--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body{
 h2 {
     text-decoration: underline;
   }
-#btn1:hover {
+#in1:hover {
       background-color: orange;
   }
   h1 {
@@ -17,4 +17,3 @@ font-size: 20px;
 background-color: papayawhip;
 }
 
-  }
