Add changes to css folder

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body{
-    background-image: url(../assets/people.jpeg);
-
+  background-image: url(/assets/AAA.jpeg);
 }
 h2 {
     text-decoration: underline;
