--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
-  background-image: url(/assets/AAA.jpeg);
+  background-image: url(/assets/swing.jpeg);
+  
 }
 h2 {
     text-decoration: underline;
