--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: whitesmoke;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
